trying to fix the results in search container to be from bottom up on mobile

--- a/main/static/css/main/yb_containers.css
+++ b/main/static/css/main/yb_containers.css
@@ -443,6 +443,12 @@
     
 }
 
+.yb-spotlight-content-container {
+    position: relative;
+    height: 100%; 
+    width: 100%;
+}
+
 
 @media screen and (min-width: 768px) {
     .yb-container-spotlight {
@@ -496,7 +502,7 @@
     }
     
     .yb-spotlight-content {
-        position: relative;
+        position: absolute;
         display: flex;
         flex-direction: column-reverse;
         bottom: 0px;
